--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,49 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html::-webkit-scrollbar {
+  width: 2px !important;
+}
+
+html::-webkit-scrollbar-track {
+  background: red !important;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #121212 !important;
+  border-radius: 5px !important;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: #242424 !important;
+} /* SHAKE ANIMATION ON HORIZONTAL DIRECTION */
+.shake {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) 0.2s both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
