--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,9 @@ html::-webkit-scrollbar-thumb {
 
 html::-webkit-scrollbar-thumb:hover {
   background: #242424 !important;
-} /* SHAKE ANIMATION ON HORIZONTAL DIRECTION */
+}
+
+/* SHAKE ANIMATION ON HORIZONTAL DIRECTION */
 .shake {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) 0.2s both;
   transform: translate3d(0, 0, 0);
